# IE492_Random_Perfect_Graph_Generation

./: .devcontainer.json  .dockerignore  .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  igraph_rpgg.cpp  makefile
Graph_Generation/Brendan_McKay/: CMakeLists.txt  graph6_to_igraph.cpp  graphconverter.cpp  graphconverter.h  main.cpp  showg.cpp
Graph_Generation/Brendan_McKay/Generated_Perfect_Graphs/: perfect9.g6
Graph_Recognition/Oylum/: oddhole5.txt  perfectness_checker.cpp  updated_perfectness_checker.cpp
final report/: main.tex  proposal_references.bib
final report/images/: contextDiagram.tex  exampleGraph.tex
final report/images/combinatorialAlgorithm/: cliqueIdentificationExample.tex  combinatorialAlgorithm.tex  compositionExample.tex  substitutionExample.tex
final report/images/heuristicRepairAlgorithm/: parentVertexApproach.tex  startingVertexApproach.tex
final report/pseudocode/: c5freecheck.tex  c5freegenerator.tex  cleanoddcyclecheck.tex  cleanoddcyclegenerator.tex  parentvertex.tex  perfectGen.tex  startingvertex.tex
final report/sections/: 1-introduction.tex  2-problem_definition.tex  3-analysis.tex  4-development.tex  5-comparison.tex  6-suggestions.tex  7-conclusion.tex  A-pseudocodes.tex  abstract.tex  titlepage.tex
final report/tables/: c5ErdosComparison.tex  graphRecognitionTable.tex  recognitionGenerationComparison.tex
igraph-0.10.4/doc/html/: igraph-Advanced.html  igraph-Arpack.html  igraph-Attributes.html  igraph-Basic.html  igraph-Bipartite.html  igraph-Cliques.html  igraph-Coloring.html  igraph-Community.html  igraph-Cycles.html  igraph-Data-structures.html  igraph-Embedding.html  igraph-Error.html  igraph-Flows.html  igraph-Foreign.html  igraph-Generators.html  igraph-Graphlets.html  igraph-HRG.html  igraph-Installation.html  igraph-Introduction.html  igraph-Isomorphism.html  igraph-Iterators.html  (+14 more)
proposal/: proposal.tex  references.bib
rpgg/: CMakeLists.txt
rpgg/Graph_Generation/Brendan_McKay/: CMakeLists.txt  graph6_to_igraph.cpp  graphconverter.cpp  graphconverter.h  main.cpp  showg.cpp
rpgg/Graph_Generation/Brendan_McKay/Generated_Perfect_Graphs/: perfect5.g6  perfect6.g6  perfect7.g6  perfect8.g6  perfect9.g6
rpgg/Graph_Generation/C5_Free/: CMakeLists.txt  c5_free_gen.cpp  c5_free_gen.h  try_c5_free_gen.cpp
rpgg/Graph_Generation/CleanOddCycle_Generation/: CMakeLists.txt  Clean_Odd_gen.cpp
rpgg/Graph_Generation/Marcov_Chain_C5_Free/: CMakeLists.txt  c5_free_gen.cpp
rpgg/Graph_Generation/Markov_Chain_BFS/: CMakeLists.txt  bfs_output1_10_0.3_100_0.txt  bfs_output1_30_0.3_100_0.txt  bfs_output1_30_0.3_100_1.txt  bfs_output1_30_0.3_100_2.txt  mc_bfs.cpp  mc_bfs_output_100_0.4.g6  mc_bfs_output_50_0.2.g6
rpgg/Graph_Generation/Markov_Chain_BFS/outputs/: bfs_output1_100_0.2_100_0.txt  bfs_output1_100_0.4_100_0.g6  bfs_output1_100_0.4_100_0.txt  bfs_output1_30_0.2_100_0.g6  bfs_output1_30_0.2_100_0.txt  bfs_output1_30_0.2_200_0.g6  bfs_output1_30_0.2_200_0.txt  bfs_output1_30_0.3_100_2.g6  bfs_output1_30_0.3_100_2.txt  bfs_output1_30_0.4_100_0.g6  bfs_output1_30_0.4_100_0.txt  bfs_output1_30_0.7_100_0.g6  bfs_output1_30_0.7_100_0.txt  bfs_output1_40_0.3_100_0.g6  bfs_output1_40_0.3_100_0.txt  bfs_output1_50_0.2_100_0.g6  bfs_output1_50_0.2_100_0.txt  bfs_output1_50_0.4_100_0.g6  bfs_output1_50_0.4_100_0.txt  bfs_output1_50_0.7_100_0.g6  bfs_output1_50_0.7_100_0.txt  bfs_output1_70_0.2_100_0.g6  bfs_output1_70_0.2_100_0.txt  bfs_output1_70_0.4_100_0.g6  bfs_output1_70_0.4_100_0.txt  bfs_output1_70_0.7_100_0.g6  bfs_output1_70_0.7_100_0.txt  bfs_output2_100_0.7_100_0.g6  bfs_output2_100_0.7_100_0.txt  outputs.txt
rpgg/Graph_Generation/PerfectGen/: CMakeLists.txt  main.cpp  perfectgen.cpp  perfectgen.h  try_perfectgen.cpp
rpgg/Graph_Recognition/Oylum/: CMakeLists.txt  converter.cpp  original_perfectness_checker.cpp  oylum.cpp  oylum.h  updated_perfectness_checker.cpp  updated_perfectness_checker.h
rpgg/Graph_Statistics/: CMakeLists.txt  graphstatistics.cpp  graphstatistics.h
rpgg/Graph_Visualization/: CMakeLists.txt  main.cpp
rpgg/Speed_Tests/: CMakeLists.txt  recognition_test.cpp
rpgg/Test/: recognition_test.cpp
rpgg/Tests/: CMakeLists.txt  c5_free_generation_test.cpp  g6_format_test.cpp  output_100_0.4.txt  recog_100_0.4.txt  recog_50_0.2.txt  recognition_compare.cpp  recognition_test.cpp  recognition_test_v2.cpp
(+20 files in other folders)
