add_executable(recognition_test recognition_test.cpp)
target_link_libraries(recognition_test PUBLIC igraph::igraph)
target_link_libraries(recognition_test PRIVATE oylum)
target_link_libraries(recognition_test PRIVATE graphconverter)

add_executable(g6_format_test g6_format_test.cpp)
target_link_libraries(g6_format_test PUBLIC igraph::igraph)
target_link_libraries(g6_format_test PRIVATE c5_free_gen)
target_link_libraries(g6_format_test PRIVATE graphconverter)

add_executable(c5_free_generation_test c5_free_generation_test.cpp)
target_link_libraries(c5_free_generation_test PUBLIC igraph::igraph)
target_link_libraries(c5_free_generation_test PRIVATE c5_free_gen)

add_executable(recognition_compare recognition_compare.cpp)
target_link_libraries(recognition_compare PUBLIC igraph::igraph)
target_link_libraries(recognition_compare PRIVATE oylum)
target_link_libraries(recognition_compare PRIVATE graphconverter)